# minimum-cost-percolation-us-airline

./: .gitignore  LICENSE  README.md  environment.yml  min_cost_percolation.out  new_run_parallel_simulations.py  pyproject.toml  run_multiple_simulations.py  run_parallel_simulations.py  run_simulations.py  setup.py
libs/mcp_us_airline/: setup.py
libs/mcp_us_airline/mcp_us_airline/utils/: __init__.py  airport_utils.py  constants.py  demand_utils.py  io_utils.py  population_utils.py  preprocess_utils.py  time_utils.py
notebooks/: generate-input-files.ipynb  generate-super-airport-input-final.ipynb  manuscript-SM-demand-supply.ipynb  manuscript-figure1.ipynb  manuscript-figure2.ipynb  manuscript-figure3.ipynb  manuscript-figure4.ipynb  manuscript-figure5.ipynb
src/: basic_functions.c  basic_functions.h  binary_search_tree.c  binary_search_tree.h  heap.c  heap.h  makefile  min_cost_percolation.c  min_cost_percolation.out  percolation_functions.c  percolation_functions.h  structs.h
